adds github login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
 
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
+        <a href="/auth/github" class="btn btn-primary"><span class="fa fa-github"></span> Github</a>
     </div>
-
-</div>
+ </div>
 </body>
 </html>
