adds client components and adds ui to homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,40 @@
     <title>Talent Exchange Login</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link rel="stylesheet" type="text/css" href="/client/styles/styles.css">
     <style>
         body        { padding-top:80px; }
     </style>
 </head>
 <body>
-<div class="container">
-
+  <div class="header">
+    <img class="logo" src="../client/assets/talent-exchange-logo.svg">
+  </div>
+  <div class="lines-top">
+    <div class="line-zero"></div>
+    <div class="line-one"></div>
+    <div class="line-two"></div>
+    <div class="line-three"></div>
+    <div class="line-four"></div>
+    <div class="line-five"></div>
+    <div class="line-six"></div>
+  </div>
+  <div class="container">
     <div class="jumbotron text-center">
         <h1><span class="fa fa-lock"></span> Log Into Talent Exchange:</h1>
-
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
         <a href="/auth/github" class="btn btn-primary"><span class="fa fa-github"></span> Github</a>
     </div>
  </div>
+  <div class="lines-bottom">
+    <div class="line-six"></div>
+    <div class="line-five"></div>
+    <div class="line-four"></div>
+    <div class="line-three"></div>
+    <div class="line-two"></div>
+    <div class="line-one"></div>
+    <div class="line-zero"></div>
+  </div>
 </body>
 </html>
