--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -2,13 +2,15 @@
 body {
   margin: 0 0;
   padding: 0 auto;
+  color: #0066cc;
+  font-family: 'Raleway', sans-serif;
 }
 
 .logo {
-  width: 200px;
+  width: 300px;
   position: fixed;
   left: 50%;
-  top: 35px;
+  top: 40px;
   transform: translate(-50%, -50%);
 }
 
@@ -16,7 +18,7 @@ body {
   width: 100%;
   margin: 0 auto;
   position: absolute;
-  top: 75px;
+  top: 85px;
 }
 
 .lines-bottom {
@@ -78,4 +80,49 @@ body {
 .footer {
   position: absolute;
   bottom: 0px;
+}
+
+.tag-line {
+  text-align: center;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 2em;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+
+.i-am {
+  top: 35%;
+  left: 50%;
+  font-weight: 600;
+  font-size: 3em;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  text-shadow: 1px 1px 2px gray;
+}
+
+.button {
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 1.5em;
+  background: transparent;
+  position: absolute;
+  border: 2px solid #0066cc;
+  border-radius: 10px;
+  padding: 10px 30px;
+  transform: translate(-50%, -50%);
+  text-shadow: 1px 1px 1px gray;
+  box-shadow: inset 0 0 3px  gray, gray 0 0 3px;
+}
+
+.user-button {
+  top: 50%;
+  left: 50%;
+}
+
+.org-button {
+  top: 57%;
+  left: 50%;
 }
