--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,45 +2,76 @@
 <html>
 <head>
     <title>Talent Exchange Signup</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:800,400,600,200,100' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <style>
         body        { padding-top:80px; }
     </style>
 </head>
 <body>
-<div class="container">
+    <img class="background" src="assets/big-world-map.svg">
+    <div class="header">
+      <div class="sign-in">
+        <a href="/login"><strong>sign <br> in</strong></a>
+      </div>
+      <img class="logo" src="assets/talent-exchange-logo.svg">
+    </div>
 
-<div class="col-sm-6 col-sm-offset-3">
+    <div class="lines-top">
+      <div class="line-zero"></div>
+      <div class="line-one"></div>
+      <div class="line-two"></div>
+      <div class="line-three"></div>
+      <div class="line-four"></div>
+      <div class="line-five"></div>
+      <div class="line-six"></div>
+    </div>
+    <div class="container">
 
-    <h1><span class="fa fa-sign-in"></span> Signup for a Talent Exchange User Account</h1>
+        <div class="">
 
-    <!-- show any messages that come back with authentication -->
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
 
-    <!-- LOGIN FORM -->
-    <form action="/signup" method="post">
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <h1><span class="fa fa-sign-in"></span> Signup for a Talent Exchange User Account</h1>
+
+            <!-- show any messages that come back with authentication -->
+            <% if (message.length > 0) { %>
+                <div class="alert alert-danger"><%= message %></div>
+            <% } %>
+
+            <!-- LOGIN FORM -->
+            <form action="/signup" method="post">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" name="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+
+                <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+            </form>
+
+            <hr>
+
+            <p>Already have a Talent Exchange User account? <a href="/login">Login</a></p>
+            <p>Or go <a href="/#/home">home</a>.</p>
+
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
-        </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
-    </form>
+    </div>
 
-    <hr>
-
-    <p>Already have a Talent Exchange User account? <a href="/login">Login</a></p>
-    <p>Or go <a href="/">home</a>.</p>
-
-</div>
-
-</div>
+    <div class="lines-bottom">
+      <div class="line-six"></div>
+      <div class="line-five"></div>
+      <div class="line-four"></div>
+      <div class="line-three"></div>
+      <div class="line-two"></div>
+      <div class="line-one"></div>
+      <div class="line-zero"></div>
+    </div>
+    
+    <div class="footer"></div>
 </body>
 </html>
